--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.10",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.0.1",
+    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
