--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "vitest",
     "test:run": "vitest run"
@@ -25,7 +26,7 @@
     "@types/supertest": "^6.0.3",
     "dotenv": "^17.0.1",
     "supertest": "^7.1.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
